--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
   <title>Ibn Arabi - Zaki Arain</title>
-  <h1>Ibn Al-'Arabi</h1>
+  <h1 class="heading" id="main-title">Ibn Al-'Arabi</h1>
+  <link rel="stylesheet" type="text/css" href="styles.css" property="stylesheet">
 </head>
 <body>
   <header>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/e/e9/Ibn_Arabi.jpg" alt="Ibn 'Arabi">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/e/e9/Ibn_Arabi.jpg" alt="Ibn 'Arabi" class="picture">
     <div>
-      <table border=1>
+      <table class="table">
         <tr>
           <th>Name</th>
           <th>Born</th>
@@ -23,13 +24,13 @@
     </div>
   </header>
 
-  <p>Ibn 'Arabi (1165-1240) can be considered the greatest of all Muslim philosophers, provided we understand philosophy in the broad, modern sense and not simply as the discipline of falsafa, whose outstanding representatives are Avicenna and, many would say, Mulla Sadra. Western scholarship and much of the later Islamic tradition have classified Ibn 'Arabi as a "Sufi", though he himself did not; his works cover the whole gamut of Islamic sciences, not least Koran commentary, Hadith (sayings of Muhammad), jurisprudence, principles of jurisprudence, theology, philosophy, and mysticism. Unlike al-Ghazali, whose range of work is similar to Ibn 'Arabi, he did not usually write in specific genres, but tended rather to integrate and synthesize the sciences in the context of thematic works, ranging in length from one or two folios to several thousand pages. Nor did he depart from the highest level of discourse, or repeat himself in different works. The later Sufi tradition called him <i>al-Shaykh al-Akbar</i>, the Greatest Master, a title that was understood to mean that no one else has been or will be able to unpack the multi-layered significance of the sources of the Islamic tradition with such detail and profundity. (Citation: <a href="http://plato.stanford.edu/entries/ibn-arabi/">Stanford Encyclopedia of Philosophy</a>)</p>
+  <p class="paragraph">Ibn 'Arabi (1165-1240) can be considered the greatest of all Muslim philosophers, provided we understand philosophy in the broad, modern sense and not simply as the discipline of falsafa, whose outstanding representatives are Avicenna and, many would say, Mulla Sadra. Western scholarship and much of the later Islamic tradition have classified Ibn 'Arabi as a "Sufi", though he himself did not; his works cover the whole gamut of Islamic sciences, not least Koran commentary, Hadith (sayings of Muhammad), jurisprudence, principles of jurisprudence, theology, philosophy, and mysticism. Unlike al-Ghazali, whose range of work is similar to Ibn 'Arabi, he did not usually write in specific genres, but tended rather to integrate and synthesize the sciences in the context of thematic works, ranging in length from one or two folios to several thousand pages. Nor did he depart from the highest level of discourse, or repeat himself in different works. The later Sufi tradition called him <i>al-Shaykh al-Akbar</i>, the Greatest Master, a title that was understood to mean that no one else has been or will be able to unpack the multi-layered significance of the sources of the Islamic tradition with such detail and profundity. (Citation: <a href="http://plato.stanford.edu/entries/ibn-arabi/">Stanford Encyclopedia of Philosophy</a>)</p>
 
 
-  <h2><i>Bezels of Wisdom</i></h2>
-  <p>In the Chapter on Adam of The Ringstones of Wisdom, Ibn al-Arabi sets God's first creative act as a self-disclosure. While expanding on this act, he repeatedly uses the image of the mirror to further our understanding of creation and our purpose. In fact, Ibn al-Arabi writes that, "He is your mirror for your vision of yourself, and you are His mirror for His vision of His Names - which are none other than Himself - and the manifestation of their determinations" (26)  , puzzlingly suggesting that self-disclosure is not limited to God. Later on, Ibn al-Arabi shares with us a Divine Saying which quickly presents itself as the central theme of Ringstones. Considered to be the words of God spoken to Muhammad outside of Qur'anic Revelation, God expresses the basis of creation and more generally the primary movement of Being when He said, "I was a hidden treasure and I loved to be known; so I created the world and made Myself known to them." Self-disclosure as the creative act is explicit in this Saying, but questions arise when this is taken together with the repeated and unique instances of the mirror symbol.</p>
+  <h2 class="heading"><i>Bezels of Wisdom</i></h2>
+  <p class="paragraph">In the Chapter on Adam of The Ringstones of Wisdom, Ibn al-Arabi sets God's first creative act as a self-disclosure. While expanding on this act, he repeatedly uses the image of the mirror to further our understanding of creation and our purpose. In fact, Ibn al-Arabi writes that, "He is your mirror for your vision of yourself, and you are His mirror for His vision of His Names - which are none other than Himself - and the manifestation of their determinations" (26)  , puzzlingly suggesting that self-disclosure is not limited to God. Later on, Ibn al-Arabi shares with us a Divine Saying which quickly presents itself as the central theme of Ringstones. Considered to be the words of God spoken to Muhammad outside of Qur'anic Revelation, God expresses the basis of creation and more generally the primary movement of Being when He said, "I was a hidden treasure and I loved to be known; so I created the world and made Myself known to them." Self-disclosure as the creative act is explicit in this Saying, but questions arise when this is taken together with the repeated and unique instances of the mirror symbol.</p>
 
- <ul>
+ <ul class="list">
   <li>Check out the <a href="http://plato.stanford.edu/entries/ibn-arabi/">Stanford Encyclopedia of Philosophy</a> for a far more comphrensive look at the life and works of this influential and enormous scholar.</li>
   <li>The SEP has a lot of recognizable features, and a lot of lists.</li>
   <li>It seems to have a straightforward "form", and then simple place to input the article.</li>
@@ -46,6 +47,8 @@
     <button type="submit">Submit</button>
 </form>
 </div>
+
+<footer>You can contact me at z [dot] arain [at] gmail [dot] com</footer>
 
 </body>
 </html>
