rip out website. add basic shape and some links

--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Zaki Arain</title>
+  <title>Zaki Arain | Chicago</title>
   <link rel="stylesheet" type="text/css" href="styles.css" property="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Poiret+One" rel="stylesheet">
 </head>
 <body>
-<div class="container">
-  <ul class = "nav">
-  </ul>
-  <div class="zaki-arain">
-    Hello world! This is a personal page for Zaki Arain.
-    A resume and more are coming soon, so please stay tuned!
-    <p>In the meantime, please check out my <a href="https://www.linkedin.com/in/zakiarain">LinkedIn Profile</a></p>
-  </div>
-</div>
+  <div class="hexagon">
+    <div class="text">
+      <a href="Arain_Resume_8-23.pdf">resume</a><br>
+      <a href="http://www.linkedin.com/in/zakiarain">connect&nbsp;</a>projects<br>
+      <div class = "name">zaki arain</div>
+      listening&nbsp;reading<br>
+      <a href="https://www.github.com/zaki-arain">coding</a>
 
-<footer>You can contact me at z[dot]arain[@]gmail[dot]com</footer>
+    </div>
+  </div>
 </body>
 </html>
