--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Zaki Arain | Chicago</title>
   <link rel="stylesheet" type="text/css" href="styles.css" property="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Poiret+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
 </head>
 <body>
   <div class="hexagon">
@@ -17,4 +17,14 @@
     </div>
   </div>
 </body>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-84995204-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </html>
