--- a/index.html
+++ b/index.html
@@ -4,22 +4,77 @@
   <title>Zaki Arain | Chicago</title>
   <link rel="stylesheet" type="text/css" href="styles.css" property="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
-  <!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="app.js" type="text/javascript"></script>
 </head>
 <body>
-  <div class="hexagon">
+  <section class="home-hexagon" id="home">
     <div class="text">
       <a href="Arain-Resume 1-16.pdf">resume</a><br>
-      <a href="http://www.linkedin.com/in/zakiarain">connect&nbsp;</a>projects<br>
+      <a href="http://www.linkedin.com/in/zakiarain">connect&nbsp;</a><a id="projects" href="#portfolio">projects</a><br>
       <div class = "name">zaki arain</div>
       <a href="https://play.spotify.com/user/128145573/playlist/3i3Qx6hYIkk4PKjZ7EE8WR">listening</a>&nbsp;<a href="https://www.goodreads.com/user/show/8413438-zaki-arain">reading</a><br>
       <a href="https://www.github.com/zaki-arain">coding</a>
 
     </div>
-  </div>
+  </section>
 
-  <div class = "shape"><div>
+  <section class="hexgrid" id="portfolio">
+    <div id="grid">
+      <span class="text nav"><a href="#home" id="back"><i class="fa fa-caret-left"></i><i class="fa fa-caret-left"></i><i class="fa fa-caret-left"></i> back</a></span>
+      <ul class="clear">
+        <li>
+          <a href="#repose">
+            <div class="hexagon">
+              <img src="repose.png" alt="Repose"/>
+              <div class="overlay"></div>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#odie">
+            <div class="hexagon">
+              <img src="odie.jpg" alt="Odie App"/>
+              <div class="overlay"></div>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#abc">
+            <div class="hexagon">
+              <img src="abc.png" alt="ABC Heating & Cooling"/>
+              <div class="overlay"></div>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#mcdonalds">
+            <div class="hexagon">
+              <img src="bg_grandcanyon.jpg" alt="McDonald's"/>
+              <div class="overlay"></div>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#natgeo">
+            <div class="hexagon">
+              <img src="bg_grandcanyon.jpg" alt="National Geographic"/>
+              <div class="overlay"></div>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#origin">
+            <div class="hexagon">
+              <img src="bg_grandcanyon.jpg" alt="Origin Investments"/>
+              <div class="overlay"></div>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </div>
+  <section>
 </body>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
