Fix broken CSS issue. Update resume link, upload new resume, and delete extraneous resumes.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
   <title>Zaki Arain | Chicago</title>
   <link rel="stylesheet" type="text/css" href="styles.css" property="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
-  <!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="hexagon">
     <div class="text">
-      <a href="Arain-Resume_5-24-18.pdf">resume</a><br>
+      <a href="Zaki_Arain_Resume_20200513.pdf">resume</a><br>
       <a href="http://www.linkedin.com/in/zakiarain">connect&nbsp;</a>projects<br>
       <div class = "name">zaki arain</div>
       <a href="https://play.spotify.com/user/128145573/playlist/3i3Qx6hYIkk4PKjZ7EE8WR">listening</a>&nbsp;<a href="https://www.goodreads.com/user/show/8413438-zaki-arain">reading</a><br>
